--- a/force-app/main/default/classes/WSAPIRESTResponse.cls
+++ b/force-app/main/default/classes/WSAPIRESTResponse.cls
@@ -1,3 +1,8 @@
+/*********************************************************************************************************
+* Class Name: WSAPIRESTResponse 
+* Description: Standard REST Response for REST Services
+*********************************************************************************************************/
+
 global class WSAPIRESTResponse{
 
     global Boolean isSuccess {get; set;}
